<resources>
    <string name="app_name">GitHub Viewer</string>
    <string name="title_repositories">Repositories</string>
    <string name="title_my_repositories">My Repositories</string>
    <string name="title_activity_repository_contributors">Contributors</string>
    <string name="msg_empty_list">Empty list</string>
    <string name="title_activity_description">Description</string>
    <string name="title_activity_auth">Auth Github.com</string>
    <string name="msg_login_or_email">Username or email</string>
    <string name="msg_auth_username_or_password_fail">Auth fail. Check, please, you username and password</string>
    <string name="msg_auth_unknown_error">Unknown authorization error</string>
    <string name="title_private">Private</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_username">Username</string>
    <string name="title_email">Email</string>
    <!-- Profile activity -->
    <string name="title_profile_login">Login:</string>
    <string name="title_profile_user_type">User Type:</string>
    <string name="title_profile_username">Username:</string>
    <string name="title_profile_location">Location:</string>
    <string name="title_profile_email">Email:</string>
    <string name="title_profile_bio">Bio:</string>
    <string name="title_activity_introductions">About GitHub.com</string>
    <string name="title_introduction_sign_in">Sign In</string>
    <string name="msg_profile_events_loading_fail">Error with loading user events</string>
    <string name="msg_profile_repos_loading_fail">Error with loading user repositories</string>

    <string name="title_sign_out_button">Sign out</string>
    <string name="msg_introductions_github_1">Welcome home, developers</string>
    <string name="msg_introductions_github_2">GitHub fosters a fast, flexible, and collaborative development process that lets you work on your own or with others.</string>
    <string name="msg_introductions_github_2_1">For everything you build</string>
    <string name="msg_introductions_github_2_2">Host and manage your code on GitHub. You can keep your work private or share it with the world.</string>
    <string name="msg_introductions_github_3_1">A better way to work</string>
    <string name="msg_introduction_github_3_2">From hobbyists to professionals, GitHub helps developers simplify the way they build software.</string>
    <string name="msg_sign_out_unknown_error">Unknown error sign out</string>
    <string name="msg_auth_title_dialog">Authorization</string>
    <string name="msg_auth_message_dialog">Authorization, please, wait</string>
    <string name="msg_introductions_go">GO</string>
    <!-- -->
    <string name="title_nav_bar_control">Control</string>
    <string name="title_nav_bar_count_logout">Logout</string>
    <string name="title_nav_bar_settings">Settings</string>
    <string name="title_nav_bar_watch">Watches</string>
    <string name="title_nav_bar_stars">Stargazers</string>
    <string name="title_nav_bar_my_repositories">My repositories</string>
    <string name="title_nav_bar_notifications">My notifications</string>
    <string name="title_nav_bar_organizations">My organizations</string>
    <string name="title_nav_bar_search">Search repositories</string>
    <!-- Profile -->
    <string name="title_profile_followers">Followers</string>
    <string name="title_profile_following">Following</string>
    <string name="title_profile_gists">Gists</string>
    <string name="title_profile_repositories">Repositories</string>
    <string name="title_profile_information">Information:</string>
    <string name="title_profile_organizations">Organizations:</string>
    <string name="title_profile_other">Other:</string>
    <string name="title_profile_tab_about">About</string>
    <string name="title_profile_tab_events">Events</string>
    <string name="title_profile_tab_repositories">Repositories</string>
    <!-- Repository -->
    <string name="title_menu">Menu</string>
    <string name="title_watch_repositories">Watch</string>
    <string name="title_star_repos">Stars</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_description">Description</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_repository_description_tab_information">About</string>
    <string name="title_repository_description_tab_content">Files</string>
    <string name="title_repository_description_tab_commits">Commits</string>
    <!-- Preference -->
    <string name="title_pref_header_data_sync">Sync Data</string>
    <string name="title_pref_header_general">General</string>
    <string name="title_pref_header_data_sync_summary">Interval sync data</string>
    <string name="title_pref_header_general_summary">General application settings</string>
    <string name="title_pref_category_sync">Synchronization</string>
    <string name="title_pref_category_sync_repositories">Repositories</string>
    <string name="title_pref_category_sync_notifications">Notification</string>
    <string name="title_pref_category_general_search_result">Max search result</string>
    <string name="title_pref_category_general_sound_notifications">Enable sound get notifications</string>
    <string name="title_pref_category_sync_summary">Synchronization repositories, notifications and etc from GitHub.com</string>
    <string name="title_pref_category_repos_summary">The interval between updating my list of repositories</string>
    <string name="title_pref_category_sync_notifications_summary">The interval between updating notifications</string>
    <string name="title_pref_category_general_search_result_summary">Max elements response by search</string>
    <string name="title_pref_category_general_sound_notifications_summary">Sound after get new notifications from GitHub.com</string>
    <!-- Preference keys -->
    <string name="title_pref_key_sync_repositories">sync_my_repositories</string>
    <string name="title_pref_key_sync_notifications">sync_notifications</string>
    <string name="title_pref_key_sync_account">sync_account</string>
    <string name="title_pref_key_general_max_search_result">general_max_search_result</string>
    <string name="title_pref_key_general_sound_notifications">general_sound_notifications</string>
    <string name="title_pref_key_app_settings">app_settings</string>
    <!-- -->
    <string name="title_repository_description_button_star">Star</string>
    <string name="title_repository_description_button_watch">Watch</string>
    <string name="title_repository_description_button_unstar">Unstar</string>
    <string name="title_repository_description_button_unwatch">Unwatch</string>
    <string name="title_repository_description_other_information">Other information</string>
    <string name="title_repository_description_contributors">Contributors</string>
    <string name="title_repository_description_issues">Issues</string>
    <string name="msg_repository_description_commits_loading_fail">Error with loading commits list</string>
    <string name="msg_repository_description_content_loading_fail">Error with loading files list</string>
    <!-- -->
    <string name="title_search_activity">Search</string>
    <string name="title_search_search">Search</string>
    <string name="title_search_filter_params">Filter settings</string>
    <!-- -->
    <string name="title_notification">Notifications</string>
    <string name="msg_unknown_error_mark_notification">Unknown error marked notification</string>
    <!-- Tabs -->
    <string name="title_notification_tab_unread">Unread</string>
    <string name="title_notification_tab_participating">Participating</string>
    <string name="title_notification_tab_all">All</string>
    <string name="title_issue_opened">Issues opened</string>
    <string name="title_issue_closed">Issues closed</string>
    <!-- -->
    <string name="title_opened">OPENED</string>
    <string name="title_closed">CLOSED</string>
    <!-- -->
    <string name="title_sort">Sorting</string>
    <string name="title_order">Order</string>
    <!-- -->
    <string name="title_search_setting_sort">Sort by</string>
    <string name="title_search_setting_order">Order</string>
    <string name="msg_github_notifications">GitHub.com notifications</string>
    <string name="msg_github_notifications_stack">%d GitHub notifications</string>
    <string name="msg_github_notifications_from">Last notification from: %s</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_events">Events</string>
    <string name="title_pref_settings">Settings</string>
    <string name="title_pref_settings_summary">Settings for application</string>
    <!-- -->
    <string name="title_search_field_sort">Sort</string>
    <string name="title_search_field_author">Author</string>
    <string name="title_search_field_github">Github</string>
    <string name="title_search_field_is_merge">Is merge</string>
    <string name="title_search_field_assignee">Assignee</string>
    <string name="title_search_field_comments">Comments</string>
    <string name="title_search_field_type">Type</string>
    <string name="title_search_field_state">State</string>
    <string name="title_search_field_value_100"><![CDATA[>100]]></string>
    <string name="title_search_field_is_fork">Is fork</string>
    <string name="title_search_field_is">Is</string>
    <string name="title_search_field_stars">Stars</string>
    <string name="title_search_field_value_1000"><![CDATA[>=1000]]></string>
    <string name="title_search_field_size">Size</string>
    <string name="title_search_field_forks">Forks</string>
    <string name="title_search_field_committer">Committer</string>
    <string name="msg_fail_grant_account_permissions">Fail granted get accounts permissions</string>
    <string name="msg_fail_get_current_user_title">Fail get user info</string>
    <string name="msg_fail_get_current_user_summary">Fail get user info</string>
    <!-- -->
    <string name="msg_contributions">%d contributions</string>
    <!-- Main Activity -->
    <string name="msg_main_activity_fail_load_events">Fail loading github events</string>
    <!-- Repository issues Activity -->
    <string name="title_repository_issue">Issues</string>
    <string name="title_repository_issues_tab_closed">Closed</string>
    <string name="title_repository_issues_tab_opened">Opened</string>
    <string name="msg_repositoy_issues_loading_fail">Error with loading issues list</string>
    <!-- User organizations -->
    <string name="title_my_organizations">My organizations</string>
</resources>