<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/title_menu">
        <menu>
            <item
                android:id="@+id/nav_my_repositories"
                android:icon="@drawable/ic_repo"
                android:title="@string/title_my_repositories" />
        </menu>
    </item>
    <item android:title="@string/title_repositories">
        <menu>
            <item
                android:id="@+id/nav_my_watch_repos"
                android:icon="@drawable/ic_eye_black_24dp"
                android:title="Отслеживаемые" />

            <item
                android:id="@+id/nav_my_star_repos"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="Избранные" />
        </menu>
    </item>
    <item android:title="@string/title_nav_bar_control">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/title_nav_bar_count_logout" />
        </menu>
    </item>
</menu>
