<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_search_filter_repo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/fragment_search_order_filter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:text="@string/title_search_field_sort"/>

            <Spinner
                android:id="@+id/spinner_search_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/entries_repo_sort"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                android:text="@string/title_search_field_forks"/>

            <EditText
                android:id="@+id/text_repo_filter_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:minWidth="100dp"
                android:textSize="12sp"
                android:textColorHint="@color/colorGithubText"
                android:hint="@string/title_search_field_value_100"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/title_search_field_size"/>

            <EditText
                android:id="@+id/text_repo_filter_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:minWidth="100dp"
                android:textSize="12sp"
                android:textColorHint="@color/colorGithubText"
                android:hint="@string/title_search_field_value_1000"
                android:inputType="text"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/title_search_field_stars"/>

            <EditText
                android:id="@+id/text_repo_filter_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:minWidth="100dp"
                android:textSize="12sp"
                android:textColorHint="@color/colorGithubText"
                android:hint="@string/title_search_field_value_100"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:text="@string/title_search_field_is"/>

            <Spinner
                android:id="@+id/spinner_repo_filter_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/entries_repo_is"/>

            <Switch
                android:id="@+id/switch_repo_filter_fork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:switchPadding="8dp"
                android:text="@string/title_search_field_is_fork"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>