<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/image_user_avatar"
        android:layout_width="@dimen/nav_bar_avatar_width_height"
        android:layout_height="@dimen/nav_bar_avatar_width_height"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:clickable="false"
        app:srcCompat="@drawable/user_avatar_default"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing2"
        android:text="@string/title_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/title_email" />

        <Button
            android:id="@+id/button_sign_out"
            android:layout_width="@dimen/nav_bar_sign_out_width"
            android:layout_height="@dimen/nav_bar_sign_out_height"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:textSize="@dimen/nav_bar_button_sign_out_text_size"
            android:text="@string/title_sign_out_button"
            tools:ignore="RelativeOverlap,RtlHardcoded"
            tools:visibility="visible"/>
    </RelativeLayout>
</LinearLayout>
